# fathersystem

./: .env  Cargo.toml  database.sql
application/: Cargo.toml
application/src/: app_config.rs  main.rs
application/src/controller/: product.rs
eshop/product/: Cargo.toml
eshop/product/src/: errors.rs  lib.rs  model.rs
src/: main.rs
src/common/: errors.rs
src/handler/: product.rs
src/services/product/: model.rs
