[package]
name = "fathersystem"
version = "0.1.0"
authors = ["datdo <datdoan1001@mail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"

tokio-postgres = "0.5.1"
tokio-pg-mapper = "0.1"
tokio-pg-mapper-derive = "0.1"
deadpool-postgres = "0.5.0"

serde = "1.0.126"
config = "0.11.0"
derive_more = "0.99.14"
dotenv = "0.15.0"