[package]
name = "fathersystem"
version = "0.1.0"
authors = ["datdo <datdoan1001@mail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eshop-product = {path = "../eshop/product" }

actix-web = "3"
dotenv = "0.15.0"
tokio-postgres = "0.5.1"
serde = "1.0.126"
deadpool-postgres = "0.5.0"
config = "0.11.0"